Added img ext-fonctionnalite

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -1,41 +1,3 @@
-<!-- TOC START min:1 max:99 link:true asterisk:false update:true -->
-- [TABLE DES MATIERES](#table-des-matieres)
-- [REVISION PROGRAMMATION ORIENTEE OBJETS](#revision-programmation-orientee-objets)
-  - [Encapsulation](#encapsulation)
-  - [Visibilité de l'information](#visibilité-de-linformation)
-  - [Abstraction](#abstraction)
-  - [Encapsulation vs Abstraction vs Visbilité](#encapsulation-vs-abstraction-vs-visbilité)
-  - [HERITAGE](#heritage)
-  - [POLYMORPHISME](#polymorphisme)
-  - [INTERFACES](#interfaces)
-  - [ATTRIBUTS STATIQUES](#attributs-statiques)
-  - [SOLID](#solid)
-  - [READER](#reader)
-      - [CHARACTER BY CHARACTER](#character-by-character)
-      - [CHARACTER BY CHARACTER - VERSION 2](#character-by-character---version-2)
-      - [BY LINE](#by-line)
-  - [EXCEPTIONS](#exceptions)
-      - [DEFINIR SA PROPRE EXCEPTION](#definir-sa-propre-exception)
-  - [HIERARCHIE CLASSES JAVA](#hierarchie-classes-java)
-  - [COMPARABLE](#comparable)
-  - [COMPARATOR](#comparator)
-- [TYPES ABSTRAITS DE DONNEES](#types-abstraits-de-donnees)
-      - [FORMALISME - 3 ELEMENTS](#formalisme---3-elements)
-      - [POURQUOI UTILISER DES FORMALISME](#pourquoi-utiliser-des-formalisme)
-- [CLASSES/TYPES GENERIQUES](#classestypes-generiques)
-      - [EXEMPLE AVEC LES ARRAYLISTS](#exemple-avec-les-arraylists)
-      - [EXEMPLE EN CREANT NOTRE PROPRE CLASSE DE TYPES GENERIQUES](#exemple-en-creant-notre-propre-classe-de-types-generiques)
-- [ENUMERATIONS](#enumerations)
-      - [DECLARATION](#declaration)
-      - [EXEMPLE DE CODE](#exemple-de-code)
-      - [CREATION D'UNE CLASSE ENUM](#creation-dune-classe-enum)
-- [EXTENSION DE FONCTIONNALITE](#extension-de-fonctionnalite)
-  - [CLASSE ENVELOPPE - WRAPPER](#classe-enveloppe---wrapper)
-  - [INTERFACE](#interface)
-- [CHECKLIST](#checklist)
-<!-- TOC END -->
-
-
 # TABLE DES MATIERES
 1. [Révision POO](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#revision-programmation-orientee-objets)
     - [Encapsulation](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation)
@@ -60,7 +22,7 @@
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
 # REVISION PROGRAMMATION ORIENTEE OBJETS
-## Encapsulation
+## ENCAPSULATION
 Contient toute l'information et n'expose que les données nécessaires.
 - Avantage : cohérence
 - But utltime : pas de paramètres à passer aux méthodes.
@@ -74,21 +36,21 @@ Contient toute l'information et n'expose que les données nécessaires.
   m.Facture();
   ```
 
-## Visibilité de l'information
+## VISIBILITE DE L'INFORMATION
 Private, Public, Protected, package-protected
 - Utilisée pour l'encapsulation, abstraction
 - Avantage : sécurité du programme, éviter les corruptions accidentelles.
 
 ![01 visbilité de l'information](img/revisionPOO/01-visibilite.jpg?raw=true)
 
-## Abstraction
+## ABSTRACTION
 On définit des objets par leur interface externe, pas par leurs détails ou leur mécanique.
 - En pratique : on se demande ce qu'on besoin d'exposer
 - Avantages : interface plus intuitive, on réduit l'impact des changements
 - But utlime : Pas besoin d’explications ou de documentation pour utiliser
 une classe.
 
-## Encapsulation vs Abstraction vs Visbilité
+## ENCAPSULATION VS ABSTRACTION VS VISIBILITE
 Encapsulation : regroupes l’information dans des entités cohérentes.
 
 Abstraction : n’exposer que les fonctions pertinentes, cacher les détails. On montre le "quoi" mais pas le "comment".
@@ -531,7 +493,7 @@ public enum Couleur {
 - Privilégier la méthode 5 (interface) pour ajouter des méthodes/comportements
 
 ## CLASSE ENVELOPPE - WRAPPER
-![01 - wrapper]
+![01 - wrapper](img/ext-fonctionnalite/01-wrapper.jpg?raw=true)
 - une classe abstraite FigureDessinable va mémoriser (dans un attribut) une instance concrète de Figure
 - les méthodes de Figure sont implémentées par délégation
 - on dérive de FigureDessinable les classes RectangleDessinable et CercleDessinable
@@ -542,7 +504,7 @@ public enum Couleur {
 		- ça ne fonctionne qu'avec des Figure, pas utilisable pour un autre objet (String)
 
 ## INTERFACE
-![02 - interface]
+![02 - interface](img/ext-fonctionnalite/02-interface.jpg?raw=true)
 - l'interface Dessinable est une classe abstraite, ne définissant que des méthodes abstraites
 - RectangleDessinable sera dérivé de Rectangle, et implements l'interface Dessinable
 - RectangleDessinable conserve ainsi ses caractéristiques provenant de Figure
