LEcture notes for stack and queue

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -18,6 +18,8 @@
     - [Types abstraits de données](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#types-abstraits-de-donnees)
     - [Classes/Types Génériques](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#classestypes-generiques)
     - [Enumerations](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#enumerations)
+3. [File]()
+4. [File]()
 
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
@@ -511,17 +513,239 @@ public enum Couleur {
 - le concept d'interface permet de regrouper des classes du point de vue de leur comportement
 - on pourra utiliser cet interface Dessinable pour n'importe quel objet (pas que des Figure)
 
+# HIERARCHIE DES COLLECTIONS
+![00 - hierarchie des collections]( )
 
+# FILE
+![01 - file]( )
+- Types abstraits de données, collections, interface simple
+- First in, first out -> FIFO
+- Exemple : cafétaria, les guichets à la poste, file d'attente classique
 
+**Ajouter un élément** : add()
 
+**Récupérer un élément** : remove()
 
+```
+import java.util.queue;
 
+class TestQueue {
+  public static void main(String args[]){
 
+    // LinkedList est une classe concrète qui implémente l'interface Queue
+    Queue<Integer> maFile = new LinkedList<>();
+    int x;
 
+    // Ajout d'un élément
+    maFile.add(12);
+    maFile.add(314);
+    maFile.add(212);
 
+    // Récupération d'un élément
+    while (! maFile.isEmpty()){
+      x = maFile.remove();
+      System.out.println("--> " + x);
+    }
+  }
+}
+```
 
+# PILE
+![02 - pile]( )
+- Types abstraits de données, collections, interface simple
+- Last in, first ou -> LIFO
+- Exemple : la vaisselle
+- Une structure récursive -> Pile = premier element + pile
 
+**Ajouter un élément** : push()
 
+**Récupérer un élément** : pop()
+
+```
+import java.util.Stack;
+
+class TestStack {
+   public static void main(String args[]){
+     Stack<Integer> maPile = new Stack<>();
+     int x;
+
+     maPile.push(12);
+     maPile.push(314);
+     maPile.push(212);
+
+     while (! maPile.isEmpty()){
+       x = maPile.pop();
+       System.out.println("--> " + x);
+     }
+   }
+}
+```
+
+#### DEMO PILE - IMPLEMENTE DANS UN TABLEAU int[5], SANS GESTION D'ERREURS (TABLEAU PLEI, VIDE, ...)
+**class DemoPile**
+```
+public class DemoPile {
+
+	public static void main(String[] args) {
+		Pile p = new Pile();
+		p.push(2); p.push(4); p.push(6); p.push(8);
+		System.out.println(p.pop());
+		System.out.println(p.pop());
+		System.out.println(p.pop());
+
+		PileV2 p2 = new PileV2();
+		p2.push(2); p2.push(4); p2.push(6); p2.push(8); p2.push(10); p2.push(12); p2.push(14);
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+	}
+}
+```
+**class Pile** :à rajouter/modifier : Pile doit être une interface
+```
+class Pile {
+	private int[] tab;
+	private int size;
+
+	public Pile() { tab = new int[5]; size = 0; }
+
+	public void push(int val) { tab[size++] = val; }
+	public int pop() { return tab[--size]; }
+	public boolean isEmpty() { return size==0; }
+}
+```
+#### DEMO - IMPLEMENTE DANS UN TABLEAU REDIMENSIONNABLE
+**class DemoPile**
+```
+public class DemoPile {
+
+	public static void main(String[] args) {
+		PileV2 p2 = new PileV2();
+		p2.push(2); p2.push(4); p2.push(6); p2.push(8); p2.push(10); p2.push(12); p2.push(14);
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+		System.out.println(p2.pop());
+	}
+}
+```
+**class PileV2**
+```
+class PileV2 {
+	final static int SIZE_TAB_INIT = 5;
+	private int size;
+	private int[] tab;
+
+	public PileV2() { tab = new int[SIZE_TAB_INIT]; size = 0; }
+
+	public void push(int val) {
+//		if (size >= SIZE_TAB_INIT) { throw new RuntimeException("Push: pile pleine !"); }
+		if (size >= tab.length) { resize(); }
+		tab[size++] = val;
+	}
+
+	public int pop() {
+		if (isEmpty()) { throw new RuntimeException("Pop: pile vide !"); }
+		return tab[--size];
+	}
+
+	private void resize() {
+		int[] newTab = new int[2*tab.length];					// Allouer le nouveau tableau
+		for (int k=0; k<size; k++) { newTab[k] = tab[k]; }	// Recopier le contenu
+		tab = newTab;													// Remplacer
+	}
+
+	public boolean isEmpty() { return size==0; }
+	public int size() { return size; }
+}
+```
+
+## DEMO PILE ET FILE
+```
+public class TestPileEtFile_Version1 {
+
+	public static void main(String[] args) {
+		Pile p = new Pile();
+		p.push( 2); p.push( 4); p.push( 6); p.push( 8); p.push(10);
+		p.push(12); p.push(14); p.push(16); p.push(18); p.push(20);
+		p.push(22); p.push(24); p.push(26); p.push(28); p.push(30);
+      while (!p.isEmpty()) { System.out.print(p.pop()+" "); } System.out.println();
+
+		File file = new File();
+		file.add( 1); file.add( 3); file.add( 5); file.add( 7); file.add( 9);
+		file.add(11); file.add(13); file.add(15); file.add(17); file.add(19);
+		file.add(21); file.add(23); file.add(25); file.add(27); file.add(29);
+		while (!file.isEmpty()) { System.out.print(file.remove()+" "); } System.out.println();
+	}
+}
+// =============================================================
+// à rajouter/modifier : Pile&File doivent être des interfaces !
+// ci-dessous, c'est une des implémentations possibles...
+// =============================================================
+class Pile { // FILO
+	final static int SIZE_TAB_INIT = 10;
+	private int size;
+	private int[] tab;
+
+	public Pile() { tab = new int[SIZE_TAB_INIT]; size = 0; }
+
+	public void push(int val) {
+//		if (size >= SIZE_TAB_INIT) { throw new RuntimeException("Push: pile pleine !"); }
+		if (size >= tab.length) { resize(); }
+		tab[size++] = val;
+	}
+
+	public int pop() {
+		if (isEmpty()) { throw new RuntimeException("Pop: pile vide !"); }
+		return tab[--size];
+	}
+
+	private void resize() {
+		int[] newTab = new int[2*tab.length];					// Allouer le nouveau tableau
+		for (int k=0; k<size; k++) { newTab[k] = tab[k]; }	// Recopier le contenu
+		tab = newTab;													// Remplacer
+	}
+
+	public boolean isEmpty() { return size==0; }
+	public int size() { return size; }
+}
+// =============================================================
+class File { // FIFO
+	private final static int SIZE_TAB_INIT=10;
+	private int in, out, nb;
+	private int[] tab;
+
+	public File() { tab = new int[SIZE_TAB_INIT]; in = out = nb = 0; }
+
+	public void add(int val) {
+		if (nb+1 >= tab.length) resize();
+		tab[in] = val;
+		in = incr(in); nb++;
+	}
+
+	public int remove() {
+		if (isEmpty()) { throw new RuntimeException("File vide !"); }
+		int val = tab[out];
+		out = incr(out); nb--;
+		return val;
+	}
+
+	/* Incrémente en boucle ==> modulo la taille du tableau tab */
+	private int incr(int i) { return i+1 >= tab.length ? 0 : i+1; } // ou VersionMath: return (i+1) % tab.length;
+
+	private void resize() {
+		int[] newTab = new int[2*tab.length];		// Allouer
+		for (int k=0, i=out; k<nb; k++) { newTab[k]=tab[i]; i=incr(i); }
+		tab=newTab; out=0; in=nb;						// Remplacer
+	}
+
+	public boolean isEmpty() { return nb==0; }
+	public int size() { return nb; }
+}
+```
 
 
 
