Ajouts d'éléments supp.

--- a/646-2_Digital_Coaching/646-2_BDC.md
+++ b/646-2_Digital_Coaching/646-2_BDC.md
@@ -113,6 +113,9 @@ Sources : https://www.netizen3.org/index.php/Les_propri%C3%A9t%C3%A9s_fondamenta
 
 ![03 - SWOT AMELIORATIONS](img/03-SWOT-ameliorations.jpg?raw=true)
 
+Autres sources : https://asana.com/fr/resources/swot-analysis
+
+
 # DIGITALISATIR UNE ENTREPRISES
 1. Le client - relation de confiance solide et durable.
 2. Responsabilisation des collaborateurs - l’indépendance et la responsabilisation des employés. Encourager vos employés à oser et à prendre des décisions ambitieuses.
@@ -166,3 +169,6 @@ Dans ce contexte il serait faux de considérer les technologies comme une fin en
 
 # TECHNOLOGIES CONVERGENTES
 Source : https://fr.wikipedia.org/wiki/Technologies_convergentes
+
+# ERGONOMIE
+ Source : https://doc.rero.ch/record/8715/files/Bernasconi.pdf
