Ajouts d'éléments supp. 2

--- a/646-2_Digital_Coaching/646-2_BDC.md
+++ b/646-2_Digital_Coaching/646-2_BDC.md
@@ -172,3 +172,37 @@ Source : https://fr.wikipedia.org/wiki/Technologies_convergentes
 
 # ERGONOMIE
  Source : https://doc.rero.ch/record/8715/files/Bernasconi.pdf
+
+# AUTRES SOURCES DANS LES PPT
+
+**Zotero** : https://www.hesge.ch/heg/sites/default/files/infotheque/guide_zotero_infotheque_2019_v2.pdf
+
+**Guide Rédaction bibliographie** : https://www.hesge.ch/heg/sites/default/files/infotheque/guide_ref_v4.6_vf.pdf
+
+**L'article: How to counter alternative facts** : https://www.desmogblog.com/donate-desmog
+
+**Confinement vôtre - Il exitste des petits objets qui peuvent vous changer la vie en cette période de pandémie** : https://www.rts.ch/play/tv/t-t-c--toutes-taxes-comprises/video/il-existe-des-petits-objets-qui-peuvent-vous-changer-la-vie-en-cette-periode-de-pandemie-?urn=urn:rts:video:12189427
+
+**Combattre les "fake news" une utopie - Fake news analyse phenomene** : https://www.swisscom.ch/fr/chroniques/mediafute/fake-news-analyse-phenomene.html?login&nevistokenconsume&error=NOT_LOGGED_IN
+
+https://www.reseau-canope.fr/savoirscdi/societe-de-linformation/le-monde-du-livre-et-des-medias/les-penseurs-de-linformation-de-la-documentation-et-de-la-pedagogie/gilles-sahut-et-les-arcanes-de-wikipedia.html
+
+**10 astuces pour contrer fake news et bad buzz** : https://mbamci.com/10-astuces-pour-contrer-fake-news-et-bad-buzz/
+
+https://www.huffingtonpost.fr/2018/01/08/fakes-news-cette-experte-nous-explique-les-3-niveaux-de-fausse-nouvelles-et-les-limites-dune-loi-macron_a_23325659/
+
+https://www.huffingtonpost.fr/deborah-elalouf-lewiner/les-fake-news-cest-a-lecole-quon-doit-les-enseigner-pour-les-combattre_a_23354008/
+
+https://mbamci.com/10-astuces-pour-contrer-fake-news-et-bad-buzz/
+
+**RGPD** : https://www.cnil.fr/fr/reglement-europeen-protection-donnees/
+
+**Entreprise ABISSA** : https://www.abissa.ch/le-droit-rgpd-me-kronbichler-donnees/
+
+**La confédération** : https://www.edoeb.admin.ch/dam/edoeb/fr/dokumente/2018/Le%20RGPD%20et%20ses%20cons%C3%A9quences%20sur%20la%20Suisse_FR%20Jan%2018.pdf.download.pdf/Le%20RGPD%20et%20ses%20cons%C3%A9quences%20sur%20la%20Suisse_FR%20Jan%2018.pdf
+
+**La blockchain est elle compatible avec RGPD** : https://www.journaldunet.com/economie/finance/1207079-la-blockchain-est-elle-compatible-avec-rgpd/
+
+**Le bilan du swot** : https://www.youtube.com/watch?v=Digp7umVtCM&feature=g-upl
+
+https://www.lefigaro.fr/actualite-france/2019/03/27/01016-20190327ARTFIG00010-menaces-de-mort-recel-de-malfaiteurs-terroristes-jawad-bendaoud-fixe-sur-son-sort.php
