listes en java - moitié terminée

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -19,7 +19,7 @@
     - [Classes/Types Génériques](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#classestypes-generiques)
     - [Enumerations](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#enumerations)
 3. [File]()
-4. [File]()
+4. [Pile]()
 
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
@@ -514,10 +514,10 @@ public enum Couleur {
 - on pourra utiliser cet interface Dessinable pour n'importe quel objet (pas que des Figure)
 
 # HIERARCHIE DES COLLECTIONS
-![00 - hierarchie des collections]( )
+![00 - hierarchie des collections](img/file-pile/00-hierarchie-collections.jpg?raw=true)
 
 # FILE
-![01 - file]( )
+![01 - file](img/file-pile/01-file.jpg?raw=true)
 - Types abstraits de données, collections, interface simple
 - First in, first out -> FIFO
 - Exemple : cafétaria, les guichets à la poste, file d'attente classique
@@ -551,7 +551,7 @@ class TestQueue {
 ```
 
 # PILE
-![02 - pile]( )
+![02 - pile](img/file-pile/02-pile.jpg?raw=true)
 - Types abstraits de données, collections, interface simple
 - Last in, first ou -> LIFO
 - Exemple : la vaisselle
@@ -681,10 +681,12 @@ public class TestPileEtFile_Version1 {
 		while (!file.isEmpty()) { System.out.print(file.remove()+" "); } System.out.println();
 	}
 }
+
 // =============================================================
 // à rajouter/modifier : Pile&File doivent être des interfaces !
 // ci-dessous, c'est une des implémentations possibles...
 // =============================================================
+
 class Pile { // FILO
 	final static int SIZE_TAB_INIT = 10;
 	private int size;
@@ -712,7 +714,9 @@ class Pile { // FILO
 	public boolean isEmpty() { return size==0; }
 	public int size() { return size; }
 }
+
 // =============================================================
+
 class File { // FIFO
 	private final static int SIZE_TAB_INIT=10;
 	private int in, out, nb;
@@ -747,7 +751,97 @@ class File { // FIFO
 }
 ```
 
+# LISTES
 
+#### COLLECTION : TABLEAUX
+
+```
+MaClasse[] tableau;                 // Déclaration de la variable
+tableau = new MaClasse[10];         // Création d’un tableau de 10 cases
+tableau[0] = new MaClasse(…)        // Création du 1er objet
+tableau[1] = new MaClasse(…)
+…
+for (MaClasse c: tableau) { … }                      // Parcours du tableau
+for (int i = 0 ; i < tableau.length ; i++ ) { … }    // Parcours du tableau (bis
+```
+
+#### LISTES CHAINEES - SIMPLE
+Une liste est une succession d’objets qui contiennent chacun une référence vers un autre objet (successeur).
+- On n’a besoin de connaître que la référence du premier objet (la tête de liste)
+- Dernier objet de la séquence : référence = null
+
+Avantages : pas besoin de redimensionner la liste
+Inconvénients : pas d'acèès direct aux éléments
+
+![01 - listes chaineees](img/listes/01-listes-chainees.jpg?raw=true)
+
+```
+class ElementListe {
+  int a;
+  float b;
+  …
+  ElementListe next = null;
+}
+```
+
+**Comment supprimer le premier element ? Comment représenter une liste vide ?**  : on sépare la liste de celle des éléments
+
+```
+class ElementListe {
+  int a;
+  float b;
+  …
+  ElementListe next = null;
+}
+
+class Liste {
+  ElementListe tete = null;
+}
+```
+#### LISTES DOUBLEMENT CHAINEES
+- Une référence vers l'éléement précédent
+
+![02 - liste double chaînée](img/listes/02-liste-doublement-chainee.jpg?raw=true)
+
+```
+class ElementListe {
+  int a;
+  float b;
+  …
+  ElementListe next = null;
+  ElementListe prev = null;
+}
+
+class Liste {
+  ElementListe tete = null;
+  ElementListe queue = null;
+}
+```
+
+#### COMPARAISON LISTES - TABLEAUX
+![03 - comparaison listes - tableaux](img/listes/03-comparaison-listes-tableaux.jpg?raw=true)
+
+#### LISTES EN JAVA
+![04 - Listes en JAVA](img/listes/04-listes-java.jpg?raw=true)
+
+![10 - accès directe élément](img/listes/10-access-directe-element.jpg?raw=true)
+
+![05 - modifications](img/listes/05-modifications-liste.jpg?raw=true)
+
+![06 - recherche](img/listes/06-recherche-liste.jpg?raw=true)
+
+![07 - parcours](img/listes/07-parcours-liste.jpg?raw=true)
+
+![09 - tri](img/listes/09-tri-liste.jpg?raw=true)
+
+![08 - tests](img/listes/08-tests-liste.jpg?raw=true)
+
+![11 - conversion extraction](img/listes/11-conversion-extraction-liste.jpg?raw=true)
+
+![12 - liste en java](img/listes/12-liste-en-java.jpg?raw=true)
+
+
+**PRINCIPALES METHODES**
 
 
 # CHECKLIST
